--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">BeRetained Example</string>
     <string name="retained">Instances retained</string>
+    <string name="retained_non_support">Instances retained (non-supported)</string>
     <string name="not_retained">Instances not retained</string>
+    <string name="not_retained_non_support">Instances not retained (non-support)</string>
     <string name="open_sub_main_activity">Open subclass Activity</string>
+    <string name="open_non_support_activity">Open non-support Activity</string>
 </resources>
